# vecmath

./: .gitignore  CMakeLists.txt  README.md
include/vecmath/: fwd.hpp  matrix.hpp  pi.hpp  vector.hpp
src/: matrix.cpp  pi.cpp  vector.cpp
